--- a/public/index.html
+++ b/public/index.html
@@ -14,28 +14,27 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Sevril">
-  <meta property="og:description"
-        content="A sandbox of random projects by Cybearl.">
+  <meta property="og:description" content="A sandbox of random projects by Cybearl.">
   <meta property="og:url" content="https://sevril.net/">
   <meta property="og:site_name" content="Sevril">
 
-  <meta property="og:image" content="https://sevril.net/og.png">
-  <meta property="og:image:secure_url" content="https://sevril.net/og.png">
-  <meta property="og:image:width" content="1700">
-  <meta property="og:image:height" content="900">
-  <meta property="og:image:type" content="image/png">
+  <!-- <meta property="og:image" content="%PUBLIC_URL%/assets/icons/og.png"> -->
+  <!-- <meta property="og:image:secure_url" content="%PUBLIC_URL%/assets/icons/og.png"> -->
+  <!-- <meta property="og:image:width" content="1700"> -->
+  <!-- <meta property="og:image:height" content="900"> -->
+  <!-- <meta property="og:image:type" content="image/png"> -->
 
-  <meta name="msapplication-TileColor" content="#1a2238">
-  <meta name="msapplication-config" content="https://sevril.net/browserconfig.xml">
-  <meta name="theme-color" content="#1a2238">
+  <meta name="msapplication-TileColor" content="#2D89EF">
+  <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
+  <meta name="theme-color" content="#00ACE7">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="https://sevril.net/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://sevril.net/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://sevril.net/favicon-16x16.png">
-  <link rel="mask-icon" href="https://sevril.net/safari-pinned-tab.svg" color="#1a2238">
-  <link rel="shortcut icon" href="https://sevril.net/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/icons/favicon-16x16.png">
+  <link rel="mask-icon" href="%PUBLIC_URL%/assets/icons/safari-pinned-tab.svg" color="#00ACE7">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/assets/icons/favicon.ico">
 
-  <link rel="manifest" crossorigin="use-credentials" href="https://sevril.net/manifest.json">
+  <link rel="manifest" crossorigin="use-credentials" href="%PUBLIC_URL%/manifest.json">
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="true">
 </head>
 
